--- a/src/App.css
+++ b/src/App.css
@@ -7,21 +7,20 @@
   width: 80%;
   margin: 0 auto;
   margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
 .app_payment {
+  display: flex;
   width: 80%;
-  height: 150px;
+  height: 160px;
   margin: 0 auto;
   background-color: #e0e0e0;
 }
 
 .app_payment_list {
-  position: relative;
-  top: 8px;
   margin: 10px;
   width: 50%;
   height: 90%;
@@ -29,4 +28,51 @@
   border-radius: 20px;
   overflow-x: auto;
   display: flex;
+}
+
+.payment_total {
+  width: 50%;
+}
+
+.total_container {
+  display: flex;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.total_title {
+  width: 50%;
+  font-size: 50px;
+  font-weight: bold;
+  background-color: white;
+  border-radius: 15px;
+  margin-left: 15px;
+  margin-right: -30px;
+}
+
+.total_price {
+  width: 50%;
+  text-align: right;
+  font-size: 50px;
+  font-weight: bold;
+  background-color: white;
+  border-radius: 15px;
+}
+
+.payment {
+  margin-top: 5px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.payment span {
+  margin-right: 15px;
+  text-align: center;
+  width: 40%;
+  color: white;
+  font-size: 50px;
+  font-weight: bold;
+  background-color: red;
+  border-radius: 15px;
 }
