--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -9,6 +9,7 @@
   margin-bottom: 20px;
   cursor: pointer;
   background-color: #f1f3f5;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .menu_container img {
