--- a/src/Navigation/Navigation.css
+++ b/src/Navigation/Navigation.css
@@ -14,6 +14,7 @@
 }
 
 .navBar_li {
+  cursor: pointer;
   list-style: none;
   font-weight: bold;
   font-size: 40px;
@@ -24,6 +25,7 @@
   justify-content: center;
   align-items: center;
   background-color: #e0e0e0;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .navBar_li + li {
