--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  cursor: pointer;
 }
 
 .payment span {
@@ -75,4 +76,8 @@
   font-weight: bold;
   background-color: red;
   border-radius: 15px;
+}
+
+.notActive {
+  display: none;
 }
